# arkanoid

./: CMakeLists.txt  README.md  main.cpp  sdl2_hello_world.cpp
headers/: ArkanoidGame.h  Ball.h  Brick.h  Bricks.h  BricksLayout.h  FrameLimiter.h  GameSettings.h  Paddle.h  RowLayout.h  Score.h  Screen.h
src/: ArkanoidGame.cpp  Ball.cpp  Brick.cpp  Bricks.cpp  FrameLimiter.cpp  Paddle.cpp  RowLayout.cpp  Score.cpp  Screen.cpp
